fixing broken url

--- a/MSFS 2020 API Host/Pages/applet.cshtml
+++ b/MSFS 2020 API Host/Pages/applet.cshtml
@@ -134,7 +134,7 @@
     <footer class="flexable flex-nogrow ">
         <div id="footer-content" class="">
             <p>
-                Project by John Penny © 2020 <a href="//github.com/johnpenny/msfs.simconnect.msfs-2020-api-host" target="_blank" class="light">View on GitHub</a>
+                Project by John Penny © 2020 <a href="//github.com/johnpenny/dotnetframework.aspnetcore.msfs-2020-api-host" target="_blank" class="light">View on GitHub</a>
             </p>
         </div>
     </footer>
